# arena-evaluation-6

arena_evaluation/: README.md  package.xml  pyproject.toml  setup.py
arena_evaluation/arena_evaluation/: create_plots.py  data_recorder_node.py  test.py
arena_evaluation/arena_evaluation/benchmark/: cli.py  config.py  runner.py  state.py  step.py
arena_evaluation/configs/benchmark/: README.md
arena_evaluation/configs/benchmark/contests/: allplanners.yaml  basic.yaml  collision_recorder.yaml  crowded_collision_check.yaml  crowded_collision_check_dwb.yaml  inter.yaml  planners.yaml
arena_evaluation/configs/benchmark/suites/: all_maps_random.yaml  arena_corridor.yaml  arena_hospital_small.yaml  basic.yaml  collision_recorder.yaml  crowded_collision_check.yaml  map_empty.yaml  meta_suite.yaml
arena_evaluation/plot_declarations/: eval_iros_2023.yaml
arena_evaluation/test/: test_benchmark_parse.py
arena_evaluation/tests/: conftest.py  test_benchmark_parse.py  test_benchmark_runner.py
arena_evaluation_msgs/: CMakeLists.txt  package.xml
arena_evaluation_msgs/msg/: BenchmarkState.msg
